--- a/planningandacquiring/templates/planningandacquiring/budget_list.html
+++ b/planningandacquiring/templates/planningandacquiring/budget_list.html
@@ -1,4 +1,4 @@
-{% extends "profiles/sidebar_pa.html" %} {% block content %}
+{% extends "profiles/sidebar_reports.html" %} {% block content %}
 {% load humanize %}
 {% load um_tags %}
 <div class="ui inverted segment" style="padding:20px;">
