--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -49,24 +49,10 @@
                                 <i class="money bill alternate outline icon"></i>Budgeting
                         </a>
                         </a>
-                        <a href="{% url 'planningandacquiring:budget_list'%}" class="item">
+                        <!-- <a href="{% url 'planningandacquiring:budget_list'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>Budgeting List
-                        </a>
-                        <!-- <a href="{% url 'planningandacquiring:vet_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Veterinarian Report
-                        </a>
-                                <a href="{% url 'planningandacquiring:accomplishment_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Accomplishment Report
-                        </a>
-                                <a href="{% url 'planningandacquiring:deployment_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Deployment Port Report
-                        </a>
-                                 <a href="{% url 'planningandacquiring:handler_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Handler Incident Report
-                        </a>
-                                <a href="{% url 'planningandacquiring:k9_report'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>K9 Generalized Report
                         </a> -->
+                    
 
                         {% endif %}
 
