--- a/training/templates/training/adoption_details.html
+++ b/training/templates/training/adoption_details.html
@@ -65,6 +65,9 @@
         </thead>
     </table>
 </div>
+<center>
+    <a class="ui primary button" href="{% url 'training:k9_returned' data.k9.id %}">Returned</a>
+</center>
 <script type="text/javascript">
 
     $(document).ready(function() {
