--- a/planningandacquiring/templates/planningandacquiring/aor_summary_report.html
+++ b/planningandacquiring/templates/planningandacquiring/aor_summary_report.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 {% block content %} 
 
@@ -12,32 +11,28 @@
         <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
     <br>Coast Guard Base Taguig
     <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-        <br>K9 Performance Report
+        <br>Area of Responsibility Summary Report
         <br><b>{{from_date}} to {{to_date}}</b></center>
-
-    <table class="ui small celled table">
-        <thead>
-          <th>K9</th>
-          <th>Capability</th>
-          <th>Port find/plant</th>
-          <th>Building find/plant</th>
-          <th>Vehicle find/plant</th>
-          <th>Baggage find/plant</th>
-          <th>Others find/plant</th>
-          <th>Rating</th>
+    
+    <table class="ui small celled five column table">
+        <thead class="center aligned">
+          <tr>
+              <th>Area</th>
+              <th>Commander</th>
+              <th>Maritime Traffic</th>
+              <th>Incident Count</th>
+              <th>K9 Request</th>
+          </tr>
         </thead>
         <tbody>
             {% for data in data%}
-            <tr>
-                <td>{{data.0}}</td>
+            <tr class="right aligned">
+                <td class="left aligned">{{data.0}}</td>
+                <td>{{data.0.commander}}</td>
                 <td>{{data.1}}</td>
-                <td>{{data.2}}/{{data.3}}</td>
-                <td>{{data.4}}/{{data.5}}</td>
-                <td>{{data.6}}/{{data.7}}</td>
-                <td>{{data.8}}/{{data.9}}</td>
-                <td>{{data.10}}/{{data.11}}</td>
-                <td style="font-weight: bold;">{{data.12}}</td>
-            </tr>
+                <td>{{data.2}}</td>
+                <td>{{data.3}}</td>
+            </tr>            
             {%endfor%}
         </tbody>
     </table>
