--- a/planningandacquiring/templates/planningandacquiring/budget_data.html
+++ b/planningandacquiring/templates/planningandacquiring/budget_data.html
@@ -295,6 +295,16 @@ $("gt_show").change(function() {
 });
 });
 
+function printDiv(divName) {
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+    }
 </script>
  
 {% endblock%}
