--- a/planningandacquiring/templates/planningandacquiring/fou_acc_report.html
+++ b/planningandacquiring/templates/planningandacquiring/fou_acc_report.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 {% block content %} 
 
@@ -12,31 +11,25 @@
         <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
     <br>Coast Guard Base Taguig
     <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-        <br>K9 Performance Report
+        <br>Feild Officer Unit Incident Report
         <br><b>{{from_date}} to {{to_date}}</b></center>
 
-    <table class="ui small celled table">
-        <thead>
-          <th>K9</th>
-          <th>Capability</th>
-          <th>Port find/plant</th>
-          <th>Building find/plant</th>
-          <th>Vehicle find/plant</th>
-          <th>Baggage find/plant</th>
-          <th>Others find/plant</th>
-          <th>Rating</th>
+    <table class="ui small celled column table">
+        <thead class="center aligned">
+            <th>Handler</th>
+            <th>K9</th>
+            <th>Incident</th>
+            <th class="five wide">Description</th>
+            <th>Reported by</th>
         </thead>
         <tbody>
             {% for data in data%}
             <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}/{{data.3}}</td>
-                <td>{{data.4}}/{{data.5}}</td>
-                <td>{{data.6}}/{{data.7}}</td>
-                <td>{{data.8}}/{{data.9}}</td>
-                <td>{{data.10}}/{{data.11}}</td>
-                <td style="font-weight: bold;">{{data.12}}</td>
+                <td>{{data.handler}}</td>
+                <td>{{data.k9}}</td>
+                <td>{{data.incident}}</td>
+                <td>{{data.description}}</td>
+                <td>{{data.reported_by}}</td>
             </tr>
             {%endfor%}
         </tbody>
