--- a/planningandacquiring/templates/planningandacquiring/health_report.html
+++ b/planningandacquiring/templates/planningandacquiring/health_report.html
@@ -1,8 +1,7 @@
-
 {% load static %}
 {% block content %} 
 
-{% if data %}
+{% if data1 %}
 
 <div class="ui segment" id="printableArea">
     <center>
@@ -12,31 +11,33 @@
         <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
     <br>Coast Guard Base Taguig
     <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-        <br>K9 Performance Report
+        <br>Health Report
         <br><b>{{from_date}} to {{to_date}}</b></center>
 
-    <table class="ui small celled table">
-        <thead>
-          <th>K9</th>
-          <th>Capability</th>
-          <th>Port find/plant</th>
-          <th>Building find/plant</th>
-          <th>Vehicle find/plant</th>
-          <th>Baggage find/plant</th>
-          <th>Others find/plant</th>
-          <th>Rating</th>
+    <table class="ui small celled column table">
+        <thead class="center aligned">
+            <th>Date</th>
+            <th>K9</th>
+            <th>Problem</th>
+            <th>Treatment</th>
+            <th>Prescribed Medicine</th>
+            <th>Veterinarian</th>
         </thead>
         <tbody>
             {% for data in data%}
             <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}/{{data.3}}</td>
-                <td>{{data.4}}/{{data.5}}</td>
-                <td>{{data.6}}/{{data.7}}</td>
-                <td>{{data.8}}/{{data.9}}</td>
-                <td>{{data.10}}/{{data.11}}</td>
-                <td style="font-weight: bold;">{{data.12}}</td>
+                <td>{{data.0.date}}</td>
+                <td>{{data.0.dog}}</td>
+                <td>{{data.0.problem}}</td>
+                <td>{{data.0.treatment}}</td>
+                    <td>
+                        <ul>
+                            {% for data1 in data.1 %}
+                            <li> {{data1.medicine}}  (Qty: {{data1.quantity}})</li>
+                            {%endfor%}
+                        </ul>
+                    </td>
+                <td>{{data.0.veterinary}}</td>
             </tr>
             {%endfor%}
         </tbody>
