--- a/planningandacquiring/templates/planningandacquiring/inventory_report.html
+++ b/planningandacquiring/templates/planningandacquiring/inventory_report.html
@@ -1,126 +1,151 @@
-{% extends "profiles/sidebar_reports.html" %}
+{% load static %}
+{% block content %} 
 {% load humanize %}
-{% load pa_tags %}
+{% if data1 or data2 or data3%}
 
-{% block content %}
-{% if messages %}
-<div class="ui inverted segment" style="padding:20px;">
-    {% for message in messages %}
-        <div class="ui green message" > {{ message }}</div>
-    {% endfor %}
-</div>
-{% endif %}
-<div id="printableArea">
-<div class="ui segment">
-        <center>
-        <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Philippine_Coast_Guard_%28PCG%29.svg/220px-Philippine_Coast_Guard_%28PCG%29.svg.png" width="100">
-        <br>Philippine Coast Guard
-        <br>Maritime Security Command
-            <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
-        <br>Coast Guard Base Taguig
-        <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-            <br>Inventory Report
-            <br><b>{{from_date}} to {{to_date}}</b></center>
+<div class="ui segment" id="printableArea">
+    <center>
+    <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Philippine_Coast_Guard_%28PCG%29.svg/220px-Philippine_Coast_Guard_%28PCG%29.svg.png" width="100">
+    <br>Philippine Coast Guard
+    <br>Maritime Security Command
+        <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
+    <br>Coast Guard Base Taguig
+    <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
+        <br>Inventory Report
+        <br><b>{{from_date}} to {{to_date}}</b></center>
 
-
-
-    <h4>Medicines</h4>
-    <table class="ui celled table" id = ''>
-        <thead>
-          <th>Item Name</th>
-          <th>Total Item Received (Beginning)</th>
-          <th>Total Item Used (Ending)</th>
-          <th>Unit Cost</th>
-          <th>Total Expenses</th>
+    {% if data2 %}
+    <table class="ui small celled structured column table">
+        <thead class="center aligned">
+            <tr>
+                <th colspan="5">DOG FOOD INVENTORY</th>
+            </tr>
+            <tr>
+                <th>Item</th>
+                <th>UOM</th>
+                <th>Price</th>
+                <th>Quantity Used</th>
+                <th>Cost</th>
+            </tr>
         </thead>
         <tbody>
-            {% for data in mu_data%}
-            <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}</td>
-                <td>{{data.3}}</td>
-                <td>{{data.4}}</td>
+            {% for data in data2 %}
+            <tr class="right aligned">
+                <td class="left aligned">{{data.0}}</td>
+                <td class="left aligned">{{data.1}}</td>
+                <td>{{data.2|intcomma}}</td>
+                <td>{{data.3|intcomma}}</td>
+                <td>{{data.4|intcomma}}</td>
             </tr>
-            {% endfor %}
+            {%endfor%}
+            <tr class="right aligned" style="font-weight: bold;">
+                <td colspan="4">Dog Food Total Cost</td>
+                <td>{{fst_cost|intcomma}}</td>
+            </tr>
         </tbody>
     </table>
-
-        <h4>Miscellaneous</h4>
-    <table class="ui celled table" id = ''>
-        <thead>
-          <th>Item Name</th>
-          <th>Total Item Received (Beginning)</th>
-          <th>Total Item Used (Ending)</th>
-          <th>Unit Cost</th>
-          <th>Total Expenses</th>
+    {% endif %}
+    {% if data1 %}
+    <table class="ui small celled structured column table">
+        <thead class="center aligned">
+            <tr>
+                <th colspan="5">MEDICINE INVENTORY</th>
+            </tr>
+            <tr>
+                <th>Item</th>
+                <th>UOM</th>
+                <th>Price</th>
+                <th>Quantity Used</th>
+                <th>Cost</th>
+            </tr>
         </thead>
         <tbody>
-            {% for data in misc_data%}
-            <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}</td>
-                <td>{{data.3}}</td>
-                <td>{{data.4}}</td>
+            {% for data in data1 %}
+            <tr class="right aligned">
+                <td class="left aligned">{{data.0}}</td>
+                <td class="left aligned">{{data.1}}</td>
+                <td>{{data.2|intcomma}}</td>
+                <td>{{data.3|intcomma}}</td>
+                <td>{{data.4|intcomma}}</td>
             </tr>
-            {% endfor %}
+            {%endfor%}
+            <tr class="right aligned" style="font-weight: bold;">
+                <td colspan="4">Medicine Total Cost</td>
+                <td>{{mst_cost|intcomma}}</td>
+            </tr>
         </tbody>
     </table>
+    {% endif %}
 
+    {% if data3 %}
+    <table class="ui small celled structured column table">
+            <thead class="center aligned">
+                <tr>
+                    <th colspan="5">MISCELLANEOUS INVENTORY</th>
+                </tr>
+                <tr>
+                    <th>Item</th>
+                    <th>UOM</th>
+                    <th>Price</th>
+                    <th>Quantity Used</th>
+                    <th>Cost</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for data in data3 %}
+                <tr class="right aligned">
+                    <td class="left aligned">{{data.0}}</td>
+                    <td class="left aligned">{{data.1}}</td>
+                    <td>{{data.2|intcomma}}</td>
+                    <td>{{data.3|intcomma}}</td>
+                    <td>{{data.4|intcomma}}</td>
+                </tr>
+                {%endfor%}
+                <tr class="right aligned" style="font-weight: bold;">
+                    <td colspan="4">Miscellaneous Total Cost</td>
+                    <td>{{misc_cost|intcomma}}</td>
+                </tr>
+            </tbody>
+        </table>
+    {% endif %}
 
-        <h4>Food</h4>
-    <table class="ui celled table" id = ''>
-        <thead>
-          <th>Item Name</th>
-          <th>Total Item Received (Beginning)</th>
-          <th>Total Item Used (Ending)</th>
-          <th>Unit Cost</th>
-          <th>Total Expenses</th>
+    <table class="ui small celled column table">
+        <thead class="right aligned">
+            <th class="ten wide">TOTAL COST</th>
+            <th>{{total|intcomma}}</th>
         </thead>
-        <tbody>
-            {% for data in food_data%}
-            <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}</td>
-                <td>{{data.3}}</td>
-                <td>{{data.4}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
     </table>
-
+    
     <br>Report generated by: {{user}}
     <br>
 
 </div>
+<center><input type="button" class="ui primary button"
+onclick="printDiv('printableArea')" value="Print" /></center>
+
+{% else %}
+<div class="ui blue icon message">
+    <i class="folder open icon"></i>
+    <div class="content">
+        <div class="header">
+            NO REPORT FOR THE SELECTED DATE RANGE. :(
+        </div>
+    </div>
 </div>
-<center><input type="button" onclick="printDiv('printableArea')" value="Print" /></center>
+
+{% endif %}
 
 <script type="text/javascript">
 
-    $(document).ready(function() {
-        $('#tabledata').DataTable();
-
-        $(function() {
-            var res = $('#status').text();
-            if($('#status').text()=='Approved'){
-               $('#approve_btn').prop('disabled', true);
-            }
-        });
-
-    } );
-
     function printDiv(divName) {
-     var printContents = document.getElementById(divName).innerHTML;
-     var originalContents = document.body.innerHTML;
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
 
-     document.body.innerHTML = printContents;
+        document.body.innerHTML = printContents;
 
-     window.print();
+        window.print();
 
-     document.body.innerHTML = originalContents;
-     }
+        document.body.innerHTML = originalContents;
+    }
 </script>
  {% endblock %}
