--- a/planningandacquiring/templates/planningandacquiring/k9_request_report.html
+++ b/planningandacquiring/templates/planningandacquiring/k9_request_report.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 {% block content %} 
 
@@ -12,32 +11,36 @@
         <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
     <br>Coast Guard Base Taguig
     <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-        <br>K9 Performance Report
+        <br>K9 Request Report
         <br><b>{{from_date}} to {{to_date}}</b></center>
-
-    <table class="ui small celled table">
-        <thead>
-          <th>K9</th>
-          <th>Capability</th>
-          <th>Port find/plant</th>
-          <th>Building find/plant</th>
-          <th>Vehicle find/plant</th>
-          <th>Baggage find/plant</th>
-          <th>Others find/plant</th>
-          <th>Rating</th>
+    
+    <table class="ui small celled structured column table">
+        <thead class="center aligned">
+          <tr>
+                <th class="three wide">Event</th>
+                <th class="one wide">Type</th>
+                <th class="three wide">Location</th>
+                <th class="two wide">Requester</th>
+                <th class="three wide">Requester Contact</th>
+                <th class="two wide">Team Leader</th>
+                <th class="one wide">K9 Requested</th>
+                <th class="one wide">K9 Deployed</th>
+            </tr>
         </thead>
         <tbody>
-            {% for data in data%}
-            <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}/{{data.3}}</td>
-                <td>{{data.4}}/{{data.5}}</td>
-                <td>{{data.6}}/{{data.7}}</td>
-                <td>{{data.8}}/{{data.9}}</td>
-                <td>{{data.10}}/{{data.11}}</td>
-                <td style="font-weight: bold;">{{data.12}}</td>
-            </tr>
+            {% for data in data %}
+            
+                <tr class="right aligned">
+                    <td class="left aligned">{{data.event_name}}</td>
+                    <td class="left aligned">{{data.sector_type}}</td>
+                    <td class="left aligned">{{data.location}}</td>
+                    <td class="left aligned">{{data.requester}}</td>
+                    <td class="left aligned">{{data.phone_number}}/{{data.email_address}}</td>
+                    <td>{{data.team_leader}}</td>
+                    <td>{{data.k9s_needed}}</td>
+                    <td>{{data.k9s_deployed}}</td>
+                </tr>   
+                     
             {%endfor%}
         </tbody>
     </table>
