--- a/profiles/templates/profiles/sidebar_reports.html
+++ b/profiles/templates/profiles/sidebar_reports.html
@@ -8,32 +8,55 @@
             <div class="three wide column">
                     <div class="ui pointing vertical menu">
                         <a class="item"> <b>Reports Menu</b></a>
-                        <a href="{% url 'planningandacquiring:vet_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Veterinarian Report
+                        <a href="{% url 'planningandacquiring:k9_performance_date'%}" class="item">
+                            <i class="open folder alternate outline icon"></i>K9 Performance Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:fou_accomplishment_date'%}" class="item">
+                            <i class="open folder alternate outline icon"></i>FOU 
+                            Accomplishment Summary Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:fou_acc_date'%}" class="item">
+                            <i class="open folder alternate outline icon"></i>FOU 
+                            Incident Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:training_summary_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>Training Summary Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:training_date'%}" class="item">
+                            <i class="open folder alternate outline icon"></i>Training Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:aor_summary_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>AOR Summary Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:port_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>Port Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:k9_request_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>K9 Request Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:k9_incident_summary_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>K9 Incident Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:k9_breeding_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>K9 Breeding Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:health_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>Health Report
                         </a>
                         <a href="{% url 'planningandacquiring:inventory_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Inventory Report
+                            <i class="open folder alternate outline
+                            icon"></i>Inventory Report
                         </a>
-                                <a href="{% url 'planningandacquiring:accomplishment_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Accomplishment Report
-                        </a>
-                                <a href="{% url 'planningandacquiring:deployment_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Deployment Port Report
-                        </a>
-                                 <a href="{% url 'planningandacquiring:handler_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Handler Incident Report
-                        </a>
-                                <a href="{% url 'planningandacquiring:k9_report'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>K9 Generalized Report
-                        </a>
-                        <a href="{% url 'planningandacquiring:k9_performance_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>K9 Performance Report
-                        </a>
-                        <a href="{% url 'planningandacquiring:dog_request_date'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>K9 Request Report
-                        </a>
-                        <a href="{% url 'planningandacquiring:training_report'%}" class="item">
-                                <i class="money bill alternate outline icon"></i>Training Report
+
+                        <a href="{% url 'planningandacquiring:budget_list'%}" class="item">
+                                <i class="money bill alternate outline icon"></i>Budgeting List
                         </a>
                     </div>
             </div>
